added dependency injector by punq

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,10 @@ dependencies = [
     "django-environ (>=0.12.0,<0.13.0)",
     "environ (>=1.0,<2.0)",
     "python-dotenv (>=1.1.0,<2.0.0)",
-    "django-ninja (>=1.4.1,<2.0.0)"
+    "django-ninja (>=1.4.1,<2.0.0)",
+    "factory-boy (>=3.3.3,<4.0.0)",
+    "dependency-injector (>=4.46.0,<5.0.0)",
+    "punq (>=0.7.0,<0.8.0)"
 ]
 
 
@@ -26,14 +29,14 @@ build-backend = "poetry.core.masonry.api"
 isort = "^5.13.2"
 pre-commit = "^3.6.0"
 faker = "^22.6.0"
-pytest = "^8.0.0"
 pytest-django = "^4.8.0"
-factory-boy = "^3.3.0"
+pytest = "^8.3.5"
+factory-boy = "^3.3.3"
 
 
 
 [tool.pytest.ini_options]
-DJANGO_SETTINGS_MODULE = "core.project.settings.local"
+DJANGO_SETTINGS_MODULE = "core.project.settings"
 
 
 [tool.isort]
